# data_lakehouse_10m_poetry

./: .gitignore  README.md  pyproject.toml
.taipy/: version.json
.taipy/version/: f8f7850e-bf98-43e6-bd57-08888a2758ef.json
dbt_lakehouse/: dbt_project.yml
dbt_lakehouse/models/: sources.yml
dbt_lakehouse/models/gold/: gold_kpi_tb_cadastros_por_dia.sql  gold_kpi_tb_vendas_por_dia.sql  gold_kpi_vendas_por_dia.sql
dbt_lakehouse/models/silver/: silver_cadastros.sql  silver_pedidos.sql
frontend/: main.py  main_polars.py
frontend/dashboard/: dashboard.md  dashboard.py  dashboard_polars.md  dashboard_polars.py
generate_dataset/: generate_raw.py  load_raw_to_postgres.py  local_to_s3_boto3.py  local_to_s3_duckdb.py
terraform/: iam.tf  main.tf  networking.tf  output.tf  rds.tf  s3.tf  security_groups.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars example  variables.tf  versions.tf
